add, feat : spark + 트렌드 분석 / 인기 동영상 조회 기능 구현